ref: module.exports -> export for the ES6 modules

--- a/.jshintignore
+++ b/.jshintignore
@@ -17,5 +17,6 @@ react/
 # not supersede JSHint but take advantage of advanced language features such as
 # Facebook Flow which are not supported by JSHint.
 modules/translation/translation.js
+app.js
 
 analytics.js
