User Picker WiP

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@atlaskit/dropdown-menu": "1.4.0",
     "@atlaskit/field-text": "2.7.0",
     "@atlaskit/icon": "6.0.0",
+    "@atlaskit/inline-dialog": "3.2.0",
     "@atlaskit/modal-dialog": "1.2.4",
+    "@atlaskit/multi-select": "5.1.1",
+    "@atlaskit/spinner": "2.2.3",
     "@atlaskit/tabs": "1.2.5",
     "@atlassian/aui": "6.0.6",
     "async": "0.9.0",
@@ -42,6 +45,7 @@
     "jwt-decode": "2.2.0",
     "lib-jitsi-meet": "jitsi/lib-jitsi-meet",
     "lodash": "4.17.4",
+    "nuclear-js": "^1.4.0",
     "postis": "2.2.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
